samples/_failures_safe/1761619386_6da443_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dd1e10b1.c: In function ‘main’:
./samples/SAFE/__tmp_dd1e10b1.c:156:16: error: missing terminating " character
  156 |         printf("Error
      |                ^~~~~~
./samples/SAFE/__tmp_dd1e10b1.c:156:9: error: expected expression at end of input
  156 |         printf("Error
      |         ^~~~~~
./samples/SAFE/__tmp_dd1e10b1.c:156:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_dd1e10b1.c:156:9: error: expected declaration or statement at end of input
